# pdf_scraper

./: .gitignore  README.md  main.py  pyproject.toml
prompts/: system_prompt.txt
src/: extractor.py  formatter.py
src/utils/: 04_aggregate_to_excel.py  1_pdf_to_text.py  2_excel_to_text.py  pdf_parser.py
src/utils/json_outputs/: barca59.json  cefal.json  ceis.json  cooperare_con_libera_terra.json  dolce.json  fanatic_about_festival.json  glab.json  la_carovana_coop.json  progetto_crescita.json  salesiani.json  totemlab.json
src/utils/output_texts/: Barca59.txt  CEFAL.txt  CEIS.txt  Cooperare con libera terra.txt  Dolce.txt  Fanatic About Festival.txt  G-Lab.txt  La Carovana coop.txt  Progetto Crescita.txt  Salesiani.txt  Totemlab.txt
src/utils/projects/Barca59/: Scheda aggiuntiva di rendicontazione - Bando ECCCO_Barca59_Casa Adolescente.xlsx
src/utils/projects/CEFAL/: Scheda aggiuntiva di rendicontazione_RicreAzione_Bando ECCCO1.xlsx
src/utils/projects/CEIS/: Scheda aggiuntiva di rendicontazione - Bando ECCCO.xlsx
src/utils/projects/Cooperare con libera terra/: scheda_aggiuntiva_di_rendicontazione.xlsx
src/utils/projects/Dolce/: Modulo-rendicontazione-FdM-parte-2 SULLA BUONA STRADA.xlsx  Scheda aggiuntiva di rendicontazione - SULLA BUONA STRADA.xlsx
src/utils/projects/Fanatic About Festival/: AFAF_Scheda aggiuntiva di rendicontazione - Bando ECCCO[1].xlsx
src/utils/projects/G-Lab/: Modulo-rendicontazione-GLAB-parte-2.xlsx  Scheda aggiuntiva di rendicontazione - GLAB.xlsx
(+3 files in other folders)
