[project]
name = "pdf-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.81.0",
    "dotenv>=0.9.9",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.1",
    "pypdf>=6.9.2",
    "pypdfium2>=5.6.0",
    "pytesseract>=0.3.13",
]
